--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,8 @@
     <string name="more">更多</string>
     <string name="setting_titlebar_text">Settings</string>
     <string name="setting_titlebar_back">Back</string>
+    <string name="share_image_button">share image button</string>
+    <string name="save_image_button">save image button</string>
+    <string name="set_as_wallpaper_button">set as wallpaper button</string>
+    <string name="send_to">Share Image to ?</string>
 </resources>
