--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">wallpaper</string>
-    <string name="app_name_version">wallpaper 0.6</string>
+    <string name="app_name">易壁纸</string>
+    <string name="app_name_version">易壁纸 0.9</string>
     <string name="titlebar_more">more</string>
     <string name="titlebar_text">A WallPic</string>
     <string name="titlebar_search">Search</string>
